# rizin-rs

./: .envrc  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: nix.yml
rizin-rs/: Cargo.toml
rizin-rs/benches/: my_benchmark.rs
rizin-rs/fuzz/: Cargo.toml
rizin-rs/src/: lib.rs  util.rs
rizin-sys/: Cargo.toml  build.rs  wrapper.h
rizin-sys/src/: lib.rs
src/: lib.rs  wrapper.rs
