[package]
name = "rizin-rs"
version = "0.9.1"
edition = "2021"
license = "LGPL-3.0-only"
description = "Rust bindings for rizin"
exclude = ["rizin/*", "flake.*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.4"
glob = "0.3"
itertools = "0.12.1"
pkg-config = "0.3.32"

[profile.dev]
rpath = true

[lib]
doctest = false

[workspace]


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"


[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
anyhow = "1.0.86"
libc = "0.2.155"
